--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@web3auth/modal": "^3.1.0",
+    "chart.js": "^4.1.1",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
@@ -17,7 +20,7 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "./node_modules/.bin/react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
